--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta name="facebook-domain-verification" content="ravrynvkihmasleiqvy1bpu4ex92dv" />
     <meta name="title" content="Навчання з репетитором з нуля до профі | N-CODE">
-    <meta name="description" content="Front-end, Phyton, QA та інші напрямки - ефективне навчання за допомогою персонального репетитора ☎ +38 (068)-627-27-27">
+    <meta name="description" content="Front-End, Phyton, QA та інші напрямки - ефективне навчання за допомогою персонального репетитора ☎ +38 (068)-627-27-27">
     <meta name="keywords" content="репетитор, навчання">
 
     <meta property="og:type" content="website">
@@ -69,14 +69,14 @@
           <div class="accordion teaching-accordion">
             <div class="accordion__item teaching-accordion-item">
               <div class="accordion__title teaching-accordion-title">
-                Front-end
+                Front-End
                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="9" viewBox="0 0 14 9" fill="none">
                   <path d="M1 1L7 7L13 1" stroke="#242524" stroke-width="2" stroke-linecap="round"/>
                 </svg>
               </div>
               <div class="accordion__content teaching-accordion-content">
-                Front-end розробники працюють з HTML, CSS і JavaScript, щоб створювати і покращувати користувацький інтерфейс веб-додатка, забезпечуючи його візуальну привабливість, функціональність та взаємодію з користувачем.
-                Front-end розробник - 
+                Front-End розробники працюють з HTML, CSS і JavaScript, щоб створювати і покращувати користувацький інтерфейс веб-додатка, забезпечуючи його візуальну привабливість, функціональність та взаємодію з користувачем.
+                Front-End розробник - 
                 одна з найактуальніших та високооплачуваних спеціальностей, попит на яку постійно зростає.
               </div>
             </div>
@@ -179,10 +179,10 @@
           </div>
           <ul class="teaching__list">
             <li class="teaching__list-item">
-              <h4 class="teaching__theme">Front-end</h4>
+              <h4 class="teaching__theme">Front-End</h4>
               <p class="teaching__theme-desk">
-                Front-end розробники створюють та покращують користувацький інтерфейс веб-додатка, забезпечуючи його візуальну привабливість, функціональність та взаємодію з користувачем.
-                Front-end розробник - одна з найактуальніших та високооплачуваних спеціальностей, попит на яку постійно зростає.
+                Front-End розробники створюють та покращують користувацький інтерфейс веб-додатка, забезпечуючи його візуальну привабливість, функціональність та взаємодію з користувачем.
+                Front-End розробник - одна з найактуальніших та високооплачуваних спеціальностей, попит на яку постійно зростає.
               </p>
             </li>
             <li class="teaching__list-item">
@@ -218,7 +218,7 @@
               </p>
             </li>
             <li class="teaching__list-item">
-              <h4 class="teaching__theme">QA (контроль якості <br> програмного забезпечення)</h4>
+              <h4 class="teaching__theme">QA</h4>
               <p class="teaching__theme-desk">
                 Робота QA-спеціалістів полягає у забезпеченні якості програмного продукту та зосереджена головним чином на його тестуванні. 
               Почати працювати тестувальником дуже легко - достатньо мати базові знання і навички у пошуку та документуванні 
@@ -249,7 +249,7 @@
       </div>
     </div>
     <div class="content-container">
-      <section class="consult">
+      <section class="consult pb-0">
         <div class="container">
           <div class="col">
             <div class="consult__title">
@@ -260,12 +260,11 @@
           </div>
           <div class="col">
             <ul class="consult__list">
-              <li>Хочеш розібратись у Javascript, React, та супутніх технологіях (Redux, MobX, React Query, Apollo GraphQl)?</li>
-              <li>Світчер чи джун і не знаєш з чого почати професійний розвиток в галузі Front-End?</li>
-              <li>Складно знайти першу роботу або не можеш розібратись з тестовим?</li>
-              <li>Ваша дитина хоче вчитись програмувати і потрібен професійний репетитор?</li>
-              <li>Потрібне кодрев'ю чи допомога з Pet проектом?</li>
+              <li>Складно знайти першу роботу або не можеш розібратись з тестовим завданням?</li>
+              <li>Ваша дитина хоче вчитись програмувати і потрібен професійний репетитор/ментор?</li>
+              <li>Потрібне кодрев'ю чи допомога з Pet проєктом?</li>
               <li>Хочеш отримати нову високооплачувану професію, але не знаєш з чого почати?</li>
+              <li>Хочеш розібратись у Javascript, React, та супутніх технологіях (Redux, MobX, React Query, Apollo GraphQl)?</li>
             </ul>
           </div>
         </div>
@@ -320,7 +319,7 @@
     </div>
     <div class="bg-dark">
       <div class="content-container">
-        <section class="roadmap">
+        <section class="roadmap pb-0">
           <h2 class="section-title">ЯК СТАТИ КРУТИМ РОЗРОБНИКОМ?</h2>
           <div class="itc-slider" data-slider="itc-slider">
             <div class="itc-slider-wrapper">
@@ -328,7 +327,7 @@
                 <div class="itc-slider-item">
                   <p class="slider-step">Крок 1</p>
                   <p class="slider-title">Заповнити заявку</p>
-                  <p class="slider-text">Залишити заявку у формі зворотнього зв’язку чи подзвонити +38(068) 627-27-27. </p>
+                  <p class="slider-text">Залишити заявку у формі зворотнього зв’язку чи подзвонити<br/>+38(068) 627-27-27. </p>
                 </div>
                 <div class="itc-slider-item">
                   <p class="slider-step">Крок 2</p>
@@ -397,8 +396,8 @@
         </section>
         <section class="salary">
           <h2 class="section-title">Кар’єрне зростання</h2>
-          <div class="section-content">
-            <p class="section-text">
+          <div class="salary__content">
+            <p class="salary__text">
               Кар'єрний ріст та збільшення заробітної плати - це два головних фактори, що приваблюють нових фахівців до сфери ІТ. І не
               даремно, адже ця галузь надає безліч можливостей для саморозвитку та професійного зростання.
             </p>
@@ -408,18 +407,8 @@
                 <div class="itc-slider-items salary-slider">
                   <div class="itc-slider-item salary-slider">
 
-                    <h3 class="salary__title">Скільки заробляє Front-end розробник?</h3>
+                    <h3 class="salary__title">Скільки заробляє Front-End розробник?</h3>
                     <div class="salary-cards">
-                      <div class="salary-card">
-                        <p class="salary-card__sum">300 $</p>
-                        <div class="salary-card__img">
-                          <img src="./img/salary-card-img_1.svg" alt="" />
-                        </div>
-                        <div class="item-group">
-                          <p class="salary-card__rank">Trainee</p>
-                          <p class="salary-card__rank-time">Від 3 місяців</p>
-                        </div>
-                      </div>
                       <div class="salary-card">
                         <p class="salary-card__sum">550$ +</p>
                         <div class="salary-card__img">
@@ -427,7 +416,7 @@
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Junior</p>
-                          <p class="salary-card__rank-time">Досвід 1-2 роки</p>
+                          <p class="salary-card__rank-time">Досвід 1 рік</p>
                         </div>
                       </div>
                       <div class="salary-card">
@@ -437,7 +426,7 @@
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Middle</p>
-                          <p class="salary-card__rank-time">Досвід від 3-5 років</p>
+                          <p class="salary-card__rank-time">Досвід від 1-2 років</p>
                         </div>
                       </div>
                       <div class="salary-card">
@@ -447,7 +436,7 @@
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Senior</p>
-                          <p class="salary-card__rank-time">Досвід від 6 років</p>
+                          <p class="salary-card__rank-time">Досвід від 3 років</p>
                         </div>
                       </div>
                       <div class="salary__line"></div>
@@ -457,18 +446,8 @@
 
                   <div class="itc-slider-item salary-slider">
                     
-                    <h3 class="salary__title">Скільки заробляє Python - розробник?</h3>
+                    <h3 class="salary__title">Скільки заробляє Python розробник?</h3>
                     <div class="salary-cards">
-                      <div class="salary-card">
-                        <p class="salary-card__sum">350 $</p>
-                        <div class="salary-card__img">
-                          <img src="./img/salary-card-img_1.svg" alt="" />
-                        </div>
-                        <div class="item-group">
-                          <p class="salary-card__rank">Trainee</p>
-                          <p class="salary-card__rank-time">Від 3 місяців</p>
-                        </div>
-                      </div>
                       <div class="salary-card">
                         <p class="salary-card__sum">800$ +</p>
                         <div class="salary-card__img">
@@ -476,7 +455,7 @@
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Junior</p>
-                          <p class="salary-card__rank-time">Досвід 1-2 роки</p>
+                          <p class="salary-card__rank-time">Досвід 1 рік</p>
                         </div>
                       </div>
                       <div class="salary-card">
@@ -486,7 +465,7 @@
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Middle</p>
-                          <p class="salary-card__rank-time">Досвід від 3-5 років</p>
+                          <p class="salary-card__rank-time">Досвід від 1-2 років</p>
                         </div>
                       </div>
                       <div class="salary-card">
@@ -496,7 +475,7 @@
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Senior</p>
-                          <p class="salary-card__rank-time">Досвід від 6 років</p>
+                          <p class="salary-card__rank-time">Досвід від 3 років</p>
                         </div>
                       </div>
                       <div class="salary__line"></div>
@@ -508,23 +487,13 @@
                     <h3 class="salary__title">Скільки заробляє QA?</h3>
                     <div class="salary-cards">
                       <div class="salary-card">
-                        <p class="salary-card__sum">200 $</p>
-                        <div class="salary-card__img">
-                          <img src="./img/salary-card-img_1.svg" alt="" />
-                        </div>
-                        <div class="item-group">
-                          <p class="salary-card__rank">Trainee</p>
-                          <p class="salary-card__rank-time">Від 3 місяців</p>
-                        </div>
-                      </div>
-                      <div class="salary-card">
                         <p class="salary-card__sum">500$ +</p>
                         <div class="salary-card__img">
                           <img src="./img/salary-card-img_2.svg" alt="" />
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Junior</p>
-                          <p class="salary-card__rank-time">Досвід 1-2 роки</p>
+                          <p class="salary-card__rank-time">Досвід 1 рік</p>
                         </div>
                       </div>
                       <div class="salary-card">
@@ -534,7 +503,7 @@
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Middle</p>
-                          <p class="salary-card__rank-time">Досвід від 3-5 років</p>
+                          <p class="salary-card__rank-time">Досвід від 1-2 років</p>
                         </div>
                       </div>
                       <div class="salary-card">
@@ -544,7 +513,7 @@
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Senior</p>
-                          <p class="salary-card__rank-time">Досвід від 6 років</p>
+                          <p class="salary-card__rank-time">Досвід від 3 років</p>
                         </div>
                       </div>
                       <div class="salary__line"></div>
@@ -636,7 +605,7 @@
         </div>
       </section>
       <span class="anchor" id="callback-section"></span>
-      <section class="callback-form" id="callbackForm"></section>
+      <section class="callback-form" id="callbackSection"></section>
     </div>
     <footer class="footer" id="footer"> </footer>
 
