--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -41,7 +41,7 @@
       <div class="paragraph">
         <h2 class="paragraph-subtitle">Загальні положення</h2>
         <p>
-          Ця Угода (далі – Угода) визначає умови та правила використання веб-сайту  <span class="underline">https://my.n-code.study/</span> (далі –
+          Ця Угода (далі – Угода) визначає умови та правила використання веб-сайту  <a href="https://my.n-code.study/" target="_blank" class="underline">https://my.n-code.study/</a> (далі –
           Платформа або сайт), в особі Правовласника Веб-сайту (далі – Адміністрація Сайту) та третіх осіб – фізичних
           та/або юридичних осіб (далі – Користувач).
         </p>
@@ -55,7 +55,7 @@
       <div class="paragraph">
         <h2 class="paragraph-subtitle">Захист авторських прав</h2>
         <p>
-          Цей сайт <span class="underline">https://my.n-code.study/</span>, зокрема його фронтенд та бекенд, є об'єктами авторського права та не
+          Цей сайт <a href="https://my.n-code.study/" target="_blank" class="underline">https://my.n-code.study/</a>, зокрема його фронтенд та бекенд, є об'єктами авторського права та не
           підлягають копіюванню, відтворенню, переробці, адаптації тощо, без дозволу правовласника цього.
         </p>
         <p>
@@ -259,12 +259,12 @@
         <p>
           Як і багато інших веб-сайтів, наша Платформа використовує файли cookies. Це невеликі файли даних, що є
           ідентифікаторами технічного відстеження для обліку статистики і т.д. Файли cookie – це файли, що містять
-          невелику кількість даних, що сервіс <span class="underline">https://my.n-code.study/</span> передає веб-браузеру Замовника та зберігаються
-          на жорсткому диску комп'ютера Замовника. Файли cookie використовуються <span class="underline">https://my.n-code.study/</span> для ідентифікації
-          Замовника під час наступних відвідувань сервісу <span class="underline">https://my.n-code.study/</span>, що спрощує інтерфейс та навігацію по сайту.
-          В інших випадках <span class="underline">https://my.n-code.study/</span> зберігає в cookie анонімну службову інформацію, яка жодним чином не відноситься
+          невелику кількість даних, що сервіс <a href="https://my.n-code.study/" target="_blank" class="underline">https://my.n-code.study/</a> передає веб-браузеру Замовника та зберігаються
+          на жорсткому диску комп'ютера Замовника. Файли cookie використовуються <a href="https://my.n-code.study/" target="_blank" class="underline">https://my.n-code.study/</a> для ідентифікації
+          Замовника під час наступних відвідувань сервісу <a href="https://my.n-code.study/" target="_blank" class="underline">https://my.n-code.study/</a>, що спрощує інтерфейс та навігацію по сайту.
+          В інших випадках <a href="https://my.n-code.study/" target="_blank" class="underline">https://my.n-code.study/</a> зберігає в cookie анонімну службову інформацію, яка жодним чином не відноситься
           до особи Замовника. Замовник може будь-коли заборонити використання cookie у своєму веб-браузері, але це може призвести
-          до некоректної роботи деяких сервісів <span class="underline">https://my.n-code.study/</span>.
+          до некоректної роботи деяких сервісів <a href="https://my.n-code.study/" target="_blank" class="underline">https://my.n-code.study/</a>.
         </p>
       </div>
       <div class="paragraph">
@@ -292,23 +292,5 @@
     </div>
   </div>
     </div>
-      <!-- Meta Pixel Code -->
-      <script>
-        !function(f,b,e,v,n,t,s)
-        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-        n.queue=[];t=b.createElement(e);t.async=!0;
-        t.src=v;s=b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t,s)}(window, document,'script',
-        'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '626317969486542');
-        fbq('track', 'PageView');
-      </script>
-      <noscript><img height="1" width="1" style="display:none"
-        src="https://www.facebook.com/tr?id=626317969486542&ev=PageView&noscript=1"
-      /></noscript>
-      <!-- End Meta Pixel Code -->
-    <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
   </body>
 </html>
