--- a/about-us.html
+++ b/about-us.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta name="facebook-domain-verification" content="ravrynvkihmasleiqvy1bpu4ex92dv" />
+    <meta name="facebook-domain-verification" content="ravrynvkihmasleiqvy1bpu4ex92dv">
     
     <meta property="og:type" content="website">
     <meta property="og:title" content="Обирай свого репетитора. Відкривай нові горизонти з нами з N-Code.">
@@ -17,14 +16,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/nice-select2.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/feedback-page.css" />
-    <link rel="stylesheet" href="css/popap-templ.css" />
-    <link rel="stylesheet" href="css/became-mentor-popup.css" />
+    <link rel="stylesheet" href="css/nice-select2.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/feedback-page.css">
+    <link rel="stylesheet" href="css/popap-templ.css">
+    <link rel="stylesheet" href="css/became-mentor-popup.css">
     <link rel="stylesheet" href="css/about-us.css">
-    <link rel="stylesheet" href="css/pop-up.css" />
+    <link rel="stylesheet" href="css/pop-up.css">
 
     <title>N-Code</title>
 </head>
