--- a/feedback.html
+++ b/feedback.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
@@ -10,8 +10,7 @@
     <meta property="og:description" content="Обирай свого репетитора. Відкривай нові горизонти з нами з N-Code.">
     <meta property="og:url" content="https://n-code.study/">
     <meta property="og:image" content="img/preview-img.png">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta name="facebook-domain-verification" content="ravrynvkihmasleiqvy1bpu4ex92dv" />
+    <meta name="facebook-domain-verification" content="ravrynvkihmasleiqvy1bpu4ex92dv">
     
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,11 +18,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/nice-select2.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/cards.css" />
-    <link rel="stylesheet" href="css/pop-up.css" />
-    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/cards.css">
+    <link rel="stylesheet" href="css/pop-up.css">
+    <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/popap-templ.css">
-    <link rel="stylesheet" href="css/became-mentor-popup.css" />
+    <link rel="stylesheet" href="css/became-mentor-popup.css">
     <link rel="stylesheet" href="css/feedback-page.css">
     <title>N-Code</title>
 </head>
@@ -40,7 +39,10 @@
     </div>
     <div class="content-container">
       <span class="anchor" id="callback-section"></span>
-      <section class="callback-form" id="callbackSection"></section>
+      <section class="callback-form">
+        <h2 class="section-title">Зворотній зв’язок</h2>
+        <div id="callbackFormWrap"></div>
+      </section>
     </div>
 
     <div class="popup-wrap" id="feedbackPopUp"></div>
