--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta name="facebook-domain-verification" content="ravrynvkihmasleiqvy1bpu4ex92dv" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="facebook-domain-verification" content="ravrynvkihmasleiqvy1bpu4ex92dv">
     <meta name="title" content="Навчання з репетитором з нуля до профі | N-CODE">
     <meta name="description" content="Front-End, Phyton, QA та інші напрямки - ефективне навчання за допомогою персонального репетитора ☎ +38 (068)-627-27-27">
     <meta name="keywords" content="репетитор, навчання">
@@ -15,33 +14,8 @@
     <meta property="og:description" content="Обирай свого репетитора. Відкривай нові горизонти з нами з N-Code.">
     <meta property="og:url" content="https://n-code.study/">
     <meta property="og:image" content="img/preview-img.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="css/nice-select2.css" />
-    <link rel="stylesheet" href="css/popap-templ.css" />
-    <link rel="stylesheet" href="css/feedback-page.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/hero.css" />
-    <link rel="stylesheet" href="css/cards.css" />
-    <link rel="stylesheet" href="css/pop-up.css" />
-    <link rel="stylesheet" href="css/became-mentor-popup.css" />
-    <link rel="stylesheet" href="css/mentor-info-popup.css" />
-    <link rel="stylesheet" href="assets/itc-slider.css" />
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.svg">
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16510469093">
-    </script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'AW-16510469093');
-    </script>
-  <!-- / Google tag (gtag.js) -->
     <title>N-Code</title>
   </head>
 
@@ -58,7 +32,7 @@
       <div class="content-container">
         <section class="teaching">
           <div class="teaching-content">
-            <h1 class="teaching-content__title">Напрямки навчання</h1>
+            <h2 class="teaching-content__title">Напрямки навчання</h2>
             <p class="teaching-content__subtitle">При індивідуальному навчанні ми пропонуємо:</p>
             <ul class="teaching-content__list">
               <li>Зручний графік занять</li>
@@ -248,6 +222,23 @@
         </section>
       </div>
     </div>
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/nice-select2.css">
+    <link rel="stylesheet" href="css/popap-templ.css">
+    <link rel="stylesheet" href="css/feedback-page.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/hero.css">
+    <link rel="stylesheet" href="css/cards.css">
+    <link rel="stylesheet" href="css/pop-up.css">
+    <link rel="stylesheet" href="css/became-mentor-popup.css">
+    <link rel="stylesheet" href="css/mentor-info-popup.css">
+    <link rel="stylesheet" href="assets/itc-slider.css">
+
     <div class="content-container">
       <section class="consult pb-0">
         <div class="container">
@@ -605,7 +596,10 @@
         </div>
       </section>
       <span class="anchor" id="callback-section"></span>
-      <section class="callback-form" id="callbackSection"></section>
+      <section class="callback-form">
+        <h2 class="section-title">Зворотній зв’язок</h2>
+        <div id="callbackFormWrap"></div>
+      </section>
     </div>
     <footer class="footer" id="footer"> </footer>
 
@@ -623,8 +617,19 @@
     <script src="js/script.js"></script>
     <script src="js/cards.js"></script>
     <script src="js/popup.js"></script>
-
-    <!-- Slider -->
     <script src="assets/itc-slider.js"></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16510469093">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-16510469093');
+    </script>
+    <!-- / Google tag (gtag.js) -->
+
   </body>
 </html>
