--- a/tutors.html
+++ b/tutors.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta name="facebook-domain-verification" content="ravrynvkihmasleiqvy1bpu4ex92dv" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="facebook-domain-verification" content="ravrynvkihmasleiqvy1bpu4ex92dv">
     
     <meta property="og:type" content="website">
     <meta property="og:title" content="Обирай свого репетитора. Відкривай нові горизонти з нами з N-Code.">
     <meta property="og:description" content="Обирай свого репетитора. Відкривай нові горизонти з нами з N-Code.">
     <meta property="og:url" content="https://n-code.study/">
     <meta property="og:image" content="img/preview-img.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="css/nice-select2.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/cards.css" />
-    <link rel="stylesheet" href="css/pop-up.css" />
-    <link rel="stylesheet" href="css/popap-templ.css" />
-    <link rel="stylesheet" href="css/became-mentor-popup.css" />
-    <link rel="stylesheet" href="css/mentor-info-popup.css" />
-    <link rel="stylesheet" href="css/tutors-page.css" />
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/nice-select2.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/cards.css">
+    <link rel="stylesheet" href="css/pop-up.css">
+    <link rel="stylesheet" href="css/popap-templ.css">
+    <link rel="stylesheet" href="css/became-mentor-popup.css">
+    <link rel="stylesheet" href="css/mentor-info-popup.css">
+    <link rel="stylesheet" href="css/tutors-page.css">
 
     
 
@@ -46,8 +45,11 @@
 
       <div class="content-container">
         <span class="anchor" id="callback-section"></span>
-        <section class="callback-form" id="callbackSection"></section>
-    </div>
+        <section class="callback-form">
+          <h2 class="section-title">Зворотній зв’язок</h2>
+          <div id="callbackFormWrap"></div>
+        </section>
+      </div>
 
     <footer class="footer" id="footer"> </footer>
 
