--- a/index.html
+++ b/index.html
@@ -224,20 +224,20 @@
     </div>
 
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com?v=1.0.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com?v=1.0.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/nice-select2.css">
-    <link rel="stylesheet" href="css/popap-templ.css">
-    <link rel="stylesheet" href="css/feedback-page.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/hero.css">
-    <link rel="stylesheet" href="css/cards.css">
-    <link rel="stylesheet" href="css/pop-up.css">
-    <link rel="stylesheet" href="css/became-mentor-popup.css">
-    <link rel="stylesheet" href="css/mentor-info-popup.css">
-    <link rel="stylesheet" href="assets/itc-slider.css">
+    <link rel="stylesheet" href="css/nice-select2.css?v=1.0.0">
+    <link rel="stylesheet" href="css/popap-templ.css?v=1.0.0">
+    <link rel="stylesheet" href="css/feedback-page.css?v=1.0.0">
+    <link rel="stylesheet" href="css/main.css?v=1.0.0">
+    <link rel="stylesheet" href="css/header.css?v=1.0.0">
+    <link rel="stylesheet" href="css/hero.css?v=1.0.0">
+    <link rel="stylesheet" href="css/cards.css?v=1.0.0">
+    <link rel="stylesheet" href="css/pop-up.css?v=1.0.0">
+    <link rel="stylesheet" href="css/became-mentor-popup.css?v=1.0.0">
+    <link rel="stylesheet" href="css/mentor-info-popup.css?v=1.0.0">
+    <link rel="stylesheet" href="assets/itc-slider.css?v=1.0.0">
 
     <div class="content-container">
       <section class="consult pb-0">
@@ -608,16 +608,16 @@
 
     <div id="get-tutor-popup"></div>
 
-    <script src="js/header.js"></script>
-    <script src="js/footer.js"></script>
-    <script src="js/popup-get-tutor.js"></script>
-    <script src="js/nice-select2.js"></script>
-    <script src="js/callback-form.js"></script>
-    <script src="https://kit.fontawesome.com/53722d01cf.js" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
-    <script src="js/cards.js"></script>
-    <script src="js/popup.js"></script>
-    <script src="assets/itc-slider.js"></script>
+    <script src="js/header.js?v=1.0.0"></script>
+    <script src="js/footer.js?v=1.0.0"></script>
+    <script src="js/popup-get-tutor.js?v=1.0.0"></script>
+    <script src="js/nice-select2.js?v=1.0.0"></script>
+    <script src="js/callback-form.js?v=1.0.0"></script>
+    <script src="https://kit.fontawesome.com/53722d01cf.js?v=1.0.0" crossorigin="anonymous"></script>
+    <script src="js/script.js?v=1.0.0"></script>
+    <script src="js/cards.js?v=1.0.0"></script>
+    <script src="js/popup.js?v=1.0.0"></script>
+    <script src="assets/itc-slider.js?v=1.0.0"></script>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16510469093">
