--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
     <meta property="og:url" content="https://n-code.study/">
     <meta property="og:image" content="img/preview-img.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.svg">
-    <link rel="preconnect" href="https://fonts.googleapis.com?v=1.0.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com?v=1.0.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/nice-select2.css?v=1.0.0">
     <link rel="stylesheet" href="css/popap-templ.css?v=1.0.0">
     <link rel="stylesheet" href="css/feedback-page.css?v=1.0.0">
@@ -238,7 +235,9 @@
       </div>
     </div>
 
-
+    <link rel="preconnect" href="https://fonts.googleapis.com?v=1.0.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com?v=1.0.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;display=swap" rel="stylesheet">
 
     <div class="content-container">
       <section class="consult pb-0">
@@ -319,7 +318,7 @@
                 <div class="itc-slider-item">
                   <p class="slider-step">Крок 1</p>
                   <p class="slider-title">Заповнити заявку</p>
-                  <p class="slider-text">Залишити заявку у формі зворотнього зв’язку чи подзвонити<br/>+38(068) 627-27-27. </p>
+                  <p class="slider-text">Залишити заявку у формі зворотнього зв’язку чи подзвонити<br>+38(068) 627-27-27. </p>
                 </div>
                 <div class="itc-slider-item">
                   <p class="slider-step">Крок 2</p>
@@ -404,7 +403,7 @@
                       <div class="salary-card">
                         <p class="salary-card__sum">550$ +</p>
                         <div class="salary-card__img">
-                          <img src="./img/salary-card-img_2.svg" alt="" />
+                          <img src="./img/salary-card-img_2.svg" alt="">
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Junior</p>
@@ -414,7 +413,7 @@
                       <div class="salary-card">
                         <p class="salary-card__sum">1500$ +</p>
                         <div class="salary-card__img">
-                          <img src="./img/salary-card-img_3.svg" alt="" />
+                          <img src="./img/salary-card-img_3.svg" alt="">
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Middle</p>
@@ -424,7 +423,7 @@
                       <div class="salary-card">
                         <p class="salary-card__sum">4000$ +</p>
                         <div class="salary-card__img">
-                          <img src="./img/salary-card-img_4.svg" alt="" />
+                          <img src="./img/salary-card-img_4.svg" alt="">
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Senior</p>
@@ -443,7 +442,7 @@
                       <div class="salary-card">
                         <p class="salary-card__sum">800$ +</p>
                         <div class="salary-card__img">
-                          <img src="./img/salary-card-img_2.svg" alt="" />
+                          <img src="./img/salary-card-img_2.svg" alt="">
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Junior</p>
@@ -453,7 +452,7 @@
                       <div class="salary-card">
                         <p class="salary-card__sum">2000$ +</p>
                         <div class="salary-card__img">
-                          <img src="./img/salary-card-img_3.svg" alt="" />
+                          <img src="./img/salary-card-img_3.svg" alt="">
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Middle</p>
@@ -463,7 +462,7 @@
                       <div class="salary-card">
                         <p class="salary-card__sum">4500$ +</p>
                         <div class="salary-card__img">
-                          <img src="./img/salary-card-img_4.svg" alt="" />
+                          <img src="./img/salary-card-img_4.svg" alt="">
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Senior</p>
@@ -481,7 +480,7 @@
                       <div class="salary-card">
                         <p class="salary-card__sum">500$ +</p>
                         <div class="salary-card__img">
-                          <img src="./img/salary-card-img_2.svg" alt="" />
+                          <img src="./img/salary-card-img_2.svg" alt="">
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Junior</p>
@@ -491,7 +490,7 @@
                       <div class="salary-card">
                         <p class="salary-card__sum">1000$ +</p>
                         <div class="salary-card__img">
-                          <img src="./img/salary-card-img_3.svg" alt="" />
+                          <img src="./img/salary-card-img_3.svg" alt="">
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Middle</p>
@@ -501,7 +500,7 @@
                       <div class="salary-card">
                         <p class="salary-card__sum">2500$ +</p>
                         <div class="salary-card__img">
-                          <img src="./img/salary-card-img_4.svg" alt="" />
+                          <img src="./img/salary-card-img_4.svg" alt="">
                         </div>
                         <div class="item-group">
                           <p class="salary-card__rank">Senior</p>
