added ads google tag

--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
     <link rel="stylesheet" href="assets/itc-slider.css?v=11.0.0">
     <title>N-Code</title>
 
+    <!-- Google tag (gtag.js) -->
+    <!-- ads.google -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16510469093">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-16510469093');
+    </script>
+
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -285,7 +297,7 @@
         <div class="container">
           <div class="advantages__item">
             <span class="item__num">01</span>
-            <p>Наші репетитори мають практичний досвід в IT <br> від 1 до 10 років</p>
+            <p>Наші репетитори мають практичний досвід в IT <br> від 2 до 30 років</p>
           </div>
           <div class="advantages__item">
             <span class="item__num">02</span>
@@ -575,7 +587,7 @@
           <div class="accordion__item">
             <div class="accordion__header">Яка кваліфікація у ваших репетиторів?</div>
             <div class="accordion__content">
-              Працюємо з репетиторами, які мають практичний досвід від 1- 10 років у провідних ІТ - компаніях,
+              Працюємо з репетиторами, які мають практичний досвід від 2 до 30 років у провідних ІТ - компаніях,
               такі як: Luxoft, Uber, GlobalLogic, Plarium, N-iX та інші.
             </div>
           </div>
