--- a/tutors.html
+++ b/tutors.html
@@ -24,6 +24,20 @@
     <link rel="stylesheet" href="css/tutors-page.css">
     <title>N-Code</title>
 
+
+    <!-- Google tag (gtag.js) -->
+    <!-- ads.google -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16510469093">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-16510469093');
+    </script>
+
+
         <!-- Google Tag Manager -->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
           new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
